Add EventServiceImpl:{getEventsByTag} implementation